@@ -66,11 +66,20 @@
 <h2 class="no-num no-toc" id="abstract">Abstract</h2>
 
 <p>
-  CSS Masking describes how to use another graphical element or image as a lumniance or alpha mask.
+  CSS Masking describes ways to partially or fully hide portions of visual elements.
+</p>
+
+<p>
+  Masking describes how to use another graphical element or image as a lumniance or alpha mask.
   Typically, rendering an element via CSS or SVG can conceptually described as if the element,
   including its children, are drawn into a buffer (such as a raster image) and then that buffer is composited
   into the elements parent. Luminance or alpha masks influence the transperency of this buffer before the compositing
   stage.
+</p>
+
+<p>
+  Clipping describes the visible region of visual elements. A region can be described by SVG graphics
+  elements or basic shapes. Everything outside of a region does not get rendered.
 </p>
 
 <h2 class="no-num no-toc" id="status">Status of this document</h2>
@@ -87,19 +96,21 @@ Table of contents</h2>
 </h2>
 
 <p>
-  With CSS Masking it is possible to specify another graphics element or file
-  to be used as an luminance or alpha mask for compositing the current object into the
+  With CSS Masking it is possible to specify another graphics element, shape or file
+  to be used as clipping region or an luminance or alpha mask for compositing the current object into the
   background.
 </p>
 
 <p>
-  A mask is applied using the 'mask' or 'mask-image' property.
+  A mask is applied using the 'mask', 'mask-image' or 'mask-box-image' properties.
   The mask source may be defined using a <a>'mask element'</a> element referenced
   by the 'mask' property.
   Alternatively, for many simple uses, the 'mask-image' property may
   refer directly to graphical elements or images to be used as mask
   forgoing the need for an explicit <a>'mask element'</a> element. The
   'mask' property is also a shorthand for other masking properties.
+  'mask-box-image' splitts a mask image into 9 pieces. The pieces may be sliced,
+  scaled and stretched in various ways to fit the size of the mask image area.
 </p>
 
 <p>
@@ -110,6 +121,11 @@ Table of contents</h2>
   will be painted onto the background through the
   mask, thus completely or partially masking out parts of the graphical
   object.
+</p>
+
+<p>
+  Clipping defines a visible region of a visual element. The region can be specified with SVG <a>graphics element</a> or
+  basic shapes. Everything outside of a region does not get rendered.
 </p>
 
 <div class="example">
