@@ -1,3 +1,6 @@
+2012-10-12 dschulze@adobe.com
+	Added clipping to abstract and introduction.
+
 2012-10-11 dschulze@adobe.com
 	Specify how mask-box-image contribute to masking.
 	Cleanup.
